# Translate-Agent-For-Unity-Game-Development-With-Gemini

./: .env.example  .gitignore  CLAUDE.md  README.ja.md  README.ko.md  README.md  cli.py  pyproject.toml  requirements.txt
backend/: main.py  models.py
backend/routers/: config.py  gws.py  job_history.py  jobs.py  languages.py  projects.py  sheets.py  translations.py  ws.py
backend/services/: config_service.py  gws_service.py  job_history_service.py  job_service.py  pending_translations_service.py  project_service.py  sheets_service.py
docs/feature/: agent-design.md  backend-design.md  frontend-design.md  gws-integration.md
docs/plans/: 2026-02-22-agent-design-vibe.md  2026-02-22-frontend-design-vibe.md  2026-02-22-frontend-design.md  2026-02-22-game-translation-agent-design.md  2026-02-23-adk-agent-implementation-design.md  2026-02-23-adk-agent-implementation.md  2026-02-23-backend-implementation-design.md  2026-02-23-backend-implementation.md  2026-02-24-v1-websocket-jobhistory-languages.md  2026-02-25-language-management.md  2026-02-25-row-crud.md  gws-integration.md  gws-integration.review.md  rustling-dancing-flurry.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  (+7 more)
game_translator/: __init__.py  agent.py  prompts.py
game_translator/skills/: gws_sheets.py
tests/: test_config.py  test_config_api.py  test_csv_upload.py  test_glossary.py  test_job_service.py  test_languages_api.py  test_project_languages.py  test_projects.py  test_sheets_api.py  test_sheets_service.py
(+69 files in other folders)
